<resources>
    <string name="app_name">Self</string>
    <string name="title">Self. Gratitude. Journal</string>
    <string name="grateful_text">What are you grateful for today?</string>
    <string name="get_started_text">Get Started</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="or_text">Or</string>
    <string name="create_acc_text">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="post_title" />
    <string name="thoughts">Your Thoughts</string>
    <string name="post_title_value">Title</string>
    <string name="save_button">Save</string>
    <string name="menu_title">Add Thoughts</string>
    <string name="signout">Sign out</string>
    <string name="no_thoughts_hint">Write a Journal Entry by clicking the \"+\" icon</string>
</resources>
