<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CreateAccountActivity">


    <ProgressBar
        android:id="@+id/create_acc_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/username_account"
        android:hint="@string/username_hint"
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingBottom="16dp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/acct_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/email_account"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/password_account"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/create_acc_button"
            android:textColor="@color/colorAccent"
            android:text="@string/create_acc_text"
            android:background="@android:color/transparent"

            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>


</LinearLayout>